Improved finding of files in Phenote directory (try conf/ as well as the jar).